src/test/deca/context/invalid/test_pass_3_opArith_right_operand_not_arith.deca
// Description:
//    Program testing that you can not do an arith operation with a right operand that can not be operated
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025

{
    int x = 1+true;
}
